Fixes feature 8 Django 4.2 and 5.0 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
-envlist = d{32,40,41}-py{39,310}
+envlist =
+    d{32,40,41}-py{39,310,311}
+    d{42,50}-py{310,311}
 skip_missing_interpreters = true
 
 [pytest]
 ;python_paths=./tests/demoapp/
-django_find_project = false
+django_find_project = true
 DJANGO_SETTINGS_MODULE=demo.settings
 norecursedirs = .tox docs ./tests/demoapp/
 python_files=tests/test_*.py
@@ -35,6 +37,8 @@ setenv =
     d32: DJANGO="Django==3.2.*"
     d40: DJANGO="Django==4.0.*"
     d41: DJANGO="Django==4.1.*"
+    d42: DJANGO="Django==4.2.*"
+    d50: DJANGO="Django==5.0.*"
 
 
 extras = dev,full
