--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,8 +37,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ "3.9", "3.10" ]
-        django-version: [ "3.2", "4.0", "4.1" ]
+        python-version: [ "3.9", "3.10", "3.11" ]
+        django-version: [ "3.2", "4.0", "4.1", "4.2", "5.0"  ]
+        exclude:
+          - python-version: 3.9
+            django-version: 4.2
+          - python-version: 3.9
+            django-version: 5.0
+          - python-version: 3.10
+            django-version: 4.2
+          - python-version: 3.10
+            django-version: 5.0
+          - python-version: 3.11
+            django-version: 4.2
+          - python-version: 3.11
+            django-version: 5.0
     env:
       DATABASE_URL: postgres://postgres:postgres@127.0.0.1:5432/smart_admin
       PY_VER: ${{ matrix.python-version}}
